[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/pausemenu.gd" type="Script" id=1]
[ext_resource path="res://UI/basic UI.tres" type="Theme" id=2]

[node name="pausemenu" type="CanvasLayer"]
layer = 30

[node name="pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )

[node name="CenterContainer" type="CenterContainer" parent="pause/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause/ColorRect/CenterContainer"]
margin_left = 265.0
margin_top = 65.0
margin_right = 375.0
margin_bottom = 295.0

[node name="Text" type="Label" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 25 )
theme = ExtResource( 2 )
text = "GAME PAUSED"

[node name="resume" type="Button" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 110.0
margin_bottom = 74.0
rect_min_size = Vector2( 100, 45 )
theme = ExtResource( 2 )
text = "Resume"

[node name="VSplitContainer" type="VSplitContainer" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 110.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 25 )

[node name="restart_level" type="Button" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 110.0
margin_bottom = 152.0
rect_min_size = Vector2( 100, 45 )
theme = ExtResource( 2 )
text = "Restart"

[node name="VSplitContainer2" type="VSplitContainer" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 110.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 25 )

[node name="quit" type="Button" parent="pause/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 110.0
margin_bottom = 230.0
rect_min_size = Vector2( 100, 45 )
theme = ExtResource( 2 )
text = "Quit"
[connection signal="pressed" from="pause/ColorRect/CenterContainer/VBoxContainer/resume" to="pause" method="_on_resume_pressed"]
[connection signal="pressed" from="pause/ColorRect/CenterContainer/VBoxContainer/restart_level" to="pause" method="_on_restart_level_pressed"]
[connection signal="pressed" from="pause/ColorRect/CenterContainer/VBoxContainer/quit" to="pause" method="_on_quit_pressed"]
